# node-web-audio-api

./: .editorconfig  .gitignore  .gitmodules  .npmignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  crush.js  import-for-wpt.js  import-for-wpt.mjs  index.cjs  index.d.ts  index.js  index.mjs  load-native.cjs  load-native.js  monkey-patch.js  noise.js  package-lock.json  package.json  polyfill.js  run-harness.sh  simple-test.cjs  simple-test.js  simple-test.mjs
.cargo/: config  config.toml
.scripts/: BUILD_NOTES.md  build-linux-arm64-rpi.mjs  build-linux-gnu-docker.mjs  build-retrieve-from-github.mjs  move-artifact.js  move-artifact.mjs  retrieve-artifacts.js  retrieve-artifacts.mjs  run-all-examples.mjs  wpt-harness.js  wpt-harness.mjs
deploy/: README.md  build-linux-arm-rpi.mjs  build-linux-arm32-rpi.mjs  build-linux-arm64-rpi.mjs  build-linux-gnu-docker.mjs  index.mjs  retrieve-win-mac-builds.mjs
examples/: all-nodes.js  all-nodes.mjs  amplitude-modulation.js  amplitude-modulation.mjs  analyser.js  analyser.mjs  audio-buffer.js  audio-buffer.mjs  audio-context.mjs  audio-worklet-online.js  audio-worklet-shared-array-buffer.js  audio-worklet-shared-array-buffer.mjs  audio-worklet-to-worker.js  audio-worklet-webassembly.js  audio-worklet-white-woise.js  audio-worklet-with-params.js  audio-worklet.js  audio-worklet.mjs  benchmarks.js  benchmarks.mjs  biquad.js  biquad.mjs  change-state.js  change-state.mjs  commonjs.cjs  composite-audio-node.js  composite-audio-node.mjs  compressor.js  compressor.mjs  constant-source.js  constant-source.mjs  convolution.js  convolution.mjs  decoding-legacy.js  decoding-legacy.mjs  decoding.js  decoding.mjs  disconnect.js  disconnect.mjs  doppler.js  (+52 more)
generator/: AudioNodeInterpreter.js  README.md  backup.js  gain-node.idl  index.js  index.mjs  package-lock.json  package.json
js/: AnalyserNode.js  AudioBuffer.js  AudioBufferSourceNode.js  AudioContext.js  AudioDestinationNode.js  AudioListener.js  AudioNode.js  AudioNode.mixin.js  AudioParam.js  AudioParamMap.js  AudioPlaybackStats.js  AudioRenderCapacity.js  AudioScheduledSourceNode.js  AudioScheduledSourceNode.mixin.js  AudioWorklet.js  AudioWorkletGlobalScope.js  AudioWorkletNode.js  AudioWorkletProcessor.js  BaseAudioContext.js  BaseAudioContext.mixin.js  BiquadFilterNode.js  ChannelMergerNode.js  ChannelSplitterNode.js  (+20 more)
(+179 files in other folders)
