[package]
authors = ["Benjamin Matuszewski <benjamin.matuszewski@ircam.fr>"]
edition = "2021"
name = "node-web-audio-api"
version = "1.0.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
audio_thread_priority = "0.34.0"
crossbeam-channel = "0.5"
napi = { version="2.16", features=["napi9", "tokio_rt"] }
napi-derive = { version="2.16" }
web-audio-api = "1.2"
# web-audio-api = { path = "../web-audio-api-rs" }

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = { version = "0.1" }

[build-dependencies]
napi-build = "2.1"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
strip = true

[features]
jack = ["web-audio-api/cpal-jack"]
