[package]
authors = ["Benjamin Matuszewski <benjamin.matuszewski@ircam.fr>"]
edition = "2021"
name = "node-web-audio-api"
version = "1.0.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5"
napi = { version = "3.8", features=["napi9", "tokio_rt"] }
napi-derive = "3.5"
thread-priority = "3.0"
web-audio-api = "1.3"
# web-audio-api = { path = "../web-audio-api-rs" }

[build-dependencies]
napi-build = "2.3"

[profile.dev]
opt-level = 3
# panic = "unwind"

[profile.release]
lto = true
strip = true
# panic = "unwind"

[features]
jack = ["web-audio-api/cpal-jack"]
