[package]
authors = ["Benjamin Matuszewski <benjamin.matuszewski@ircam.fr>"]
edition = "2021"
name = "node-web-audio-api"
version = "2.0.0"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5"
napi = { version = "3.10", features=["napi9", "tokio_rt"] }
napi-derive = "3.5"
thread-priority = "3.1"
web-audio-api = "1.6"
# web-audio-api = { path = "../web-audio-api-rs" }

[build-dependencies]
napi-build = "2.3"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
strip = true

[features]
jack = ["web-audio-api/cpal-jack"]
linux = ["web-audio-api/cpal-pipewire", "web-audio-api/cpal-jack"]
wpt = ["web-audio-api/spec-compliant-worklet-inputs"]
